--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,19 +1,5 @@
-// Police Roboto
-@font-face {
-    font-family: Roboto;
-    src: url(/public/fonts/Roboto-Regular.ttf);
-}
-// Police Roboto Bold
-@font-face {
-    font-family: Roboto;
-    src: url(/public/fonts/Roboto-Bold.ttf);
-    font-weight: bold;
-}
-// Police Shrikhand
-@font-face {
-    font-family: Shrikhand;
-    src: url(/public/fonts/Shrikhand-Regular.ttf);
-}
+// Importation des polices de caractères via Google Fonts
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap');
 // Mise en forme de base des liens hypertexte
 a{
     text-decoration: none;
