--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -9,10 +9,11 @@
     font-weight: 500;
     background: $color-cta;
     box-shadow: 0px 4px 10px 0px #00000040;
-    transition: filter 0.5s ease;
+    transition: all 0.5s ease;
     // Bouton call to action animation au hover
     &:hover{
         filter: opacity(0.85);
+        box-shadow: 0px 4px 15px 0px #00000060;
     }
 }
 
