--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -90,7 +90,7 @@
     background-color: white;
     // Carte description du plat
     &_desc{
-        transition: min-width 0.5s ease-out;
+        transition: min-width 0.2s linear;
         min-width: 290px;
         margin-left: 10px;
         height: 100%;
@@ -118,6 +118,7 @@
     // Carte Menu prix
     &_price{
         transform: translateX(8px);
+        transition: transform 0.2s linear;
         height: 100%;
         display: flex;
         align-items: flex-end;
@@ -127,7 +128,8 @@
         h5{
             font-size: 15px;
             margin: 0px;
-            margin-right: 15px;
+            margin-right: 20px;
+            margin-bottom: 15px;
         }
         // Carte Menu prix coche
         &_check{
@@ -144,9 +146,10 @@
     // Carte Menu prix animation de la coche
     &:hover .menu-container_card_price {
         transform: translateX(0px);
+        transition: transform 0.2s linear;
     }
     &:hover .menu-container_card_desc{
-        transition: min-width 0.5s ease-out;
+        transition: min-width 0.2s linear;
         min-width: 238px;
     }
 }
