--- a/sass/layout/_responsive.scss
+++ b/sass/layout/_responsive.scss
@@ -8,7 +8,7 @@
     }
     // Hero Title Responsive
     .hero{
-        height: 239px;
+        height: 280px;
         &-align{
             gap: 18px;
             width: 100%;
@@ -19,19 +19,24 @@
         &-title{
             font-size: 40px;
             margin: 0;
+            margin-bottom: 15px;
             width: auto;
             font-weight: bold;
         }
         &-subtitle{
             margin: 0;
             width: auto;
+            margin-bottom: 15px;
+        }
+        &-btn{
+            margin-bottom: 15px;
         }
     }
     // Fonctionnement Responsive
     .tutorial{
         flex-direction: column;
         padding: 50px 180px 50px 180px;
-        width: 55%;
+        width: 75%;
         &-title{
             margin: 0px 0px 25px 0px;
             width: 100%;
@@ -52,9 +57,11 @@
         @include flex-center;
         flex-direction: row;
         flex-wrap: wrap;
+        width: 80%;
         padding: 50px 180px 50px 180px;
         &_title{
             width: 100%;
+            margin-left: 35px
         }
         &-align{
             @include flex-around;
@@ -93,7 +100,6 @@
         &-container_card{
             width: 634px;
             &_price{
-                transition: transform 0.5s linear;
                 transform: translateX(59px);
             }
         }
@@ -114,7 +120,7 @@
         }
         h1{
             margin: 0;
-            margin: 15px 25px 15px 25px;
+            margin: 15px 25px 15px 100px;
         }
         h2{
             margin-bottom: 20px;
