--- a/sass/pages/index.scss
+++ b/sass/pages/index.scss
@@ -38,6 +38,7 @@
         font-size: 24px;
         font-weight: bold;
         width: 275px;
+        margin-top: -20px;
     }
     // Hero title sous-titre
     &-subtitle{
