--- a/sass/pages/menu.scss
+++ b/sass/pages/menu.scss
@@ -38,6 +38,7 @@
         &_title{
             font-size: 16px;
             font-weight: 300;
+            margin-left: 10px;
             width: 40px;
             border-bottom: $color-tertiary-bg solid 3px;
         }
